2006-05-03  Bob Weigel <rweigel@gmu.edu>

        * scripts/set/setdiff.m: New arg, byrows.  New tests.

2006-04-29  John W. Eaton  <jwe@octave.org>

	* startup/main-rcfile: Disable some warnings.

2006-04-14  Bill Denney  <denney@seas.upenn.edu>

 	* strings/strcmpi.m: Return false instead of error if args are not
	char or cellstr.

2006-04-10  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Ensure that returned structure array is
	Nx1, not 1xN.

2006-04-06  Olli Saarela  <olli.saarela@kcl.fi>

	* plot/hist.m: Ignore NaN in inputs.

2006-04-06  Keith Goodman  <kwgoodman@gmail.com>

	* miscellaneous/mkoctfile.m: Doc string fix.

2006-04-05  John W. Eaton  <jwe@octave.org>

	* plot/__plt2__.m: Return data = [] and fmtstr = "" if x1 and x2
	are both empty.
	* plot/__plt__.m: Ignore empty data and format strings returned
	from __plt1__ or __plt2__.

2006-04-04  Bob Weigel  <rweigel@gmu.edu>

        * scripts/set/unique.m: Properly handle single column input when
	"rows" is specified.

2006-04-04  John W. Eaton  <jwe@octave.org>

	* path/setpath.m: New file.
	* path/savepath.m: Use setpath to set path instead of assigning
	directly to LOADPATH.

	* path/Makefile.in, path/addpath.m, path/rmpath.m, path/savepath.m:
	New files, adapted from Octave Forge by Keith Goodman
	<kwgoodman@gmail.com>.
	* path: New directory.
	* Makefile.in (SUBDIRS): Add it to the list.
	* configure.in (AC_CONFIG_FILES): Include path/Makefile here.

2006-04-02  David Bateman  <dbateman@free.fr>

	* general/tril.m, general.triu.m:
	Use resize (resize (x, 0), nr, nc) rather than zeros (nr, nc)
	to allow user types to work correctly.
	* special-matrix/hankel.m, special-matrix/toeplitz.m: Ditto.

2006-04-03  David Bateman  <dbateman@free.fr>

	* plot/grid.m: Cache the state of the grid to allow toggling.
	Accept keyword "minor" for minor grid.

2006-03-28  John W. Eaton  <jwe@octave.org>

	* general/isscalar.m: Only require that all dimensions are 1 for
	compatiblity.
