@@ -1,3 +1,8 @@
+2006-05-03  David Bateman  <dbateman@free.fr>
+
+	* path/rmpath.m, path/addpath.m, miscellaneous/path.m: Replace all
+	explicit uses of a path seperation character with pathsep().
+
 2006-05-03  Bob Weigel <rweigel@gmu.edu>
 
         * scripts/set/setdiff.m: New arg, byrows.  New tests.
